<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/profile_gender"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/genderSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:entries="@array/genders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/profile_age"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/profile_height"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/profile_weight"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/userActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/profile_activity"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalSpinner" />

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:entries="@array/activityLevels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userActivity" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/profile_goal"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/goalSpinner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:entries="@array/goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySpinner"/>

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInput" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInput" />


</androidx.constraintlayout.widget.ConstraintLayout>
